<resources>
    <string name="app_name">Araç Takip Sistemi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="giri">Giriş</string>
    <string name="kurumsal_giri">Kurumsal giriş</string>
    <string name="ifre">Şifre:</string>
    <string name="kullan_c_ad">Kullanıcı Adı:</string>
    <string name="todo">TODO</string>
    <string name="kullanici_girisi">Tahsin Bey</string>
    <string name="iletisim">iletisim</string>
    <string name="anasayfaya_h_geldiniz">TUNALI MOTORLU ARAÇLAR</string>
    <string name="hakk_m_zda">hakkımızda</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="ara_takip">Araç Takip</string>
    <string name="leti_im">İletişim</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="ara_takip_sistemi">Araç Takip Sistemi</string>
    <string name="textview5" />
    <string name="textview6">plakalı aracınızın</string>
    <string name="plaka">06 DK 5345</string>
    <string name="plakal_arac_n_z_n">plakalı aracınızın;</string>
    <string name="aracinresimleri">TODO</string>
    <string name="tamir_in_denecek_tutar">Tamir İçin Ödenecek Tutar:</string>
    <string name="iki">ÇIKIŞ</string>
    <string name="ara_durumu">Araç Durumu:</string>
    <string name="arac_n_tamir_durumu">Aracın Tamir Durumu:</string>
    <string name="arac_n_tahmini_teslim_s_resi">Aracın TAhmini Teslim Süresi:</string>
    <string name="textview25">TextView</string>
    <string name="todo2">TODO</string>
    <string name="isim">İsim:</string>
    <string name="soyisim">Soyisim:</string>
    <string name="e_mail">E-mail:</string>
    <string name="name"></string>
    <string name="kurumsalgiris">KURUMSAL GİRİŞ</string>
    <string name="ara_kayd">Araç Kaydı</string>
    <string name="kay_tl_ara">Kayıtlı Araç</string>
    <string name="soyisimtxt"></string>
    <string name="telefon">Telefon:</string>
    <string name="sifre">Şifre:</string>
    <string name="plakay_giriniz"></string>
    <string name="ara_plakas">Araç Plakası:</string>
    <string name="arac_n_hasar_tan_m">Aracın Hasar Tanımı:</string>
    <string name="kayit">Kayıt</string>
    <string name="barkodcikar">Barkod Çıkar</string>
    <string name="kullaniciadi">Kullanıcı Adı:</string>
    <string name="kullaniciaditxt" />
    <string name="kullanici_plakas">Kullanici Plakası:</string>
    <string name="tamamland">Tamamlandı</string>
    <string name="checkbox">CheckBox</string>
    <string name="yap_l_yor1">Yapılıyor</string>
    <string name="yap_ma_ba_lanmad">Yapıma Başlanmadı</string>
    <string name="kaydet">KAYDET</string>
    <string name="barcodevew">TODO</string>
    <string name="imagebar">TODO</string>
    <string name="read_barcode">read barcode</string>
    <string name="yap_l_yor">Yapılıyor</string>
    <string name="_20_02_2018">20.02.2018</string>
    <string name="_285">285 TL</string>
    <string name="imagearac1">TODO</string>
    <string name="hakkimizdabilgi">HAKKIMIZDA
1988 yılında yedek parça satış acentesi olarak otomotiv sektörüne adım attık . 1996 yılında parça işimiz devam ederken oto servis atölyesini de faaliyete geçirdik. Servis işini büyüterek 2004 yılında Tunalı Motorlu Araçlar şirketini kurduk. Amacımız başarılı bir özel servis olarak müşterilerimizn ihtiyaçlarına cevap verebilmek , istihdam yaratmak, üreterek markalaşmak . Teknolojiyi takip ederek kaliteli ve ekonomik fiyatlarla müşteri memnuniyeti oluşturup  yeni kuşaklara ulaşabilen bir şirket yaratmak hedefi ile çalışıyoruz.
</string>
    <string name="iletisimtxt"></string>
    <string name="adres">Adres:</string>
    <string name="iltel">+90 (312) 354 90 60 +90 312 354 97 70 info@tunali.com.tr</string>
    <string name="iltel1">İletişim:</string>
    <string name="oto">oto hizmet servisleri</string>
    <string name="todo11">TODO</string>

    <string name="imgtun">TODO</string>
    <string name="tunali_motorlu_ara_lar">TUNALI MOTORLU ARAÇLAR</string>
    <string name="tunal_motorlu_ara_lar_macun_mahallesi_macun_k_me_evleri_204_cadde_no_265_06105_yenimahalle_ankara">Tunalı Motorlu Araçlar Macun Mahallesi, Macun Küme Evleri, 204. Cadde, No:265, 06105 Yenimahalle/Ankara</string>
    <string name="_90_312_354_90_60_90_312_354_97_70_info_tunali_com_tr">+90 (312) 354 90 60 +90 312 354 97 70 info@tunali.com.tr</string>


</resources>
