<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/indir"
    android:visibility="visible">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="52dp"
        android:text="@string/kullanici_girisi"
        android:textColor="@android:color/background_light"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="40dp"
        tools:text="Tahsin Bey" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignEnd="@+id/textView10"
        android:layout_alignRight="@+id/textView10"
        android:text="@string/plaka"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="40dp"
        tools:text="06 DK 5345" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="124dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="26dp"
        android:text="@string/plakal_arac_n_z_n"
        android:textColor="@android:color/background_light"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="37dp"
        android:text="@string/arac_n_tamir_durumu"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="36dp"
        android:text="@string/ara_durumu"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="20dp"
        android:text="@string/arac_n_tahmini_teslim_s_resi"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        app:srcCompat="@mipmap/time" android:contentDescription="@string/aracinresimleri" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="23dp"
        android:text="@string/tamir_in_denecek_tutar"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/iki" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:text="@string/yap_l_yor"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:contentDescription="@string/imagearac1"
        app:srcCompat="@mipmap/time" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:text="@string/_20_02_2018"
        android:textColor="@android:color/background_light"
        tools:text="20.02.2018" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/textView23"
        android:layout_alignStart="@+id/textView23"
        android:text="@string/_285"
        android:textColor="@android:color/background_light"
        tools:text="285 TL" />

</RelativeLayout>