<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/indir">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isim"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="24dp"
        android:text="@string/soyisim"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="24dp"
        android:text="@string/e_mail"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/name"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:layout_below="@+id/editText7"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/soyisimtxt"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText9"
        android:layout_alignBottom="@+id/editText9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/telefon"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText9"
        android:layout_alignRight="@+id/editText9"
        android:layout_below="@+id/editText9"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText10"
        android:layout_alignBottom="@+id/editText10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/sifre"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText10"
        android:layout_marginTop="13dp"
        android:text="@string/ara_plakas"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:layout_toRightOf="@+id/textView16"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/plakay_giriniz"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText11"
        android:layout_marginTop="15dp"
        android:text="@string/arac_n_hasar_tan_m"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText11"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText11"
        android:layout_alignRight="@+id/editText11"
        android:layout_below="@+id/editText12"
        android:text="@string/barkodcikar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/button7"
        tools:ignore="UselessLeaf">

        <ImageView
            android:id="@+id/imagebar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagebar" />

    </LinearLayout>



</RelativeLayout>
