<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/indir">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="85dp"
        android:text="@string/kullan_c_ad"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView18"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:text="@string/kullaniciaditxt"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="19dp"
        android:text="@string/kullanici_plakas"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_below="@+id/editText14"
        android:layout_marginTop="20dp"
        android:text="@string/tamamland"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="13dp"
        android:text="@string/yap_l_yor"
        android:textColor="@android:color/background_light" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="18dp"
        android:text="@string/yap_ma_ba_lanmad"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText14"
        android:layout_toEndOf="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_toEndOf="@+id/textView19"
        android:layout_toRightOf="@+id/textView19"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:text="@string/kaydet" />
</RelativeLayout>