<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/indir">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView30"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/tunali_motorlu_ara_lar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="95dp"
        tools:text="TUNALI MOTORLU ARAÇLAR" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/oto"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="150dp"
        tools:text="oto servis hizmetleri" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        app:srcCompat="@mipmap/logo" android:contentDescription="@string/imgtun" />

</RelativeLayout>